src/objects/loan__Accounting_Rule_Header__c.object
<CustomObject>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Business_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Event</label>
        <referenceTo>loan__Business_Event__c</referenceTo>
        <relationshipLabel>Accounting Rule Headers</relationshipLabel>
        <relationshipName>Accounting_Rule_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__System_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Generated</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Rule Header</label>
    <nameField>
        <label>Accounting Rule Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting Rule Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>